got image to stay fixed while you scroll, thx stackoverflow

--- a/SOLO/WORLD WEAVER/server/public/styles/style.css
+++ b/SOLO/WORLD WEAVER/server/public/styles/style.css
@@ -98,7 +98,7 @@ td {
   /*width: 200px;*/
 }
 
-.gameContainer, .allContainer {
+.gameContainer, .allContainer, .savedContainer {
   /*background-image: url(http://msutoday.msu.edu/_/img/assets/2014/space.jpg);*/
   background-image: url(https://cdn.pixabay.com/photo/2015/11/19/07/27/star-1050487_960_720.jpg);
   /*background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/Night_Sky_Stars_Trees_02.jpg/1024px-Night_Sky_Stars_Trees_02.jpg);*/
@@ -113,10 +113,11 @@ td {
   margin-top: -25px;
 }
 
-.favContainer {
+.favContainer, .myContainer {
   background-image: url(http://eskipaper.com/images/starry-sky-4.jpg);
   background-size: cover;
   margin-top: -25px;
+  background-attachment: fixed;
 }
 
 .lead2 {
